oppdatert: (#20)
* oppdatert:
- java 17
- archtest
- lagt inn logback cfg