@@ -2,9 +2,9 @@ buildscript {
 
     ext {
         kotlinVersion = '1.6.10'
-        springBootVersion = '2.6.3'
+        springBootVersion = '2.6.5'
         logstashLogbackVersion = '7.0.1'
-        archunitVersion = '0.11.0'              //nyere versjoner feiler på sirkulære tester
+        archunitVersion = '0.23.1'              //nyere versjoner feiler på sirkulære tester
         microMeterPrometheusVersion = '1.8.2'
         epMetricsVersion = "0.+"
         oidcTokenSupportVersion = '1.3.9'
@@ -37,8 +37,6 @@ plugins {
     id 'se.patrikerdes.use-latest-versions' version '0.2.18'
     id "org.owasp.dependencycheck" version "6.5.0.1"
     id 'com.adarshr.test-logger' version '3.2.0'
-    id "org.sonarqube" version "3.3"
-    id 'jacoco'
 }
 
 apply plugin: 'kotlin'
@@ -69,9 +67,6 @@ dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
     implementation 'org.springframework.kafka:spring-kafka'
 
-    //aws and s3
-    /*implementation 'com.amazonaws:aws-java-sdk-s3:1.12.129'*/
-
     //GCP
     implementation("com.google.cloud:google-cloud-storage:$gcpStorageVersion")
     implementation(platform("com.google.cloud:libraries-bom:23.0.0"))
@@ -88,8 +83,8 @@ dependencies {
     implementation("no.nav.security:token-client-spring:${oidcTokenSupportVersion}")
     implementation("no.nav.security:token-validation-spring:${oidcTokenSupportVersion}")
     implementation("no.nav.security:token-validation-jaxrs:${oidcTokenSupportVersion}")
-    implementation("no.nav.security:token-validation-test-support:${oidcTokenSupportVersion}")
 
+    testImplementation("no.nav.security:token-validation-test-support:${oidcTokenSupportVersion}")
 
     //test
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
@@ -104,8 +99,8 @@ dependencies {
     testImplementation 'io.findify:s3mock_2.13:0.2.6'
     testImplementation("org.junit.jupiter:junit-jupiter:5.8.2")
     testImplementation("org.junit.jupiter:junit-jupiter-params:5.8.2")
-    testImplementation("org.mock-server:mockserver-client-java:5.11.2")
-    testImplementation("org.mock-server:mockserver-netty:5.11.2") {
+    testImplementation('org.mock-server:mockserver-client-java:5.13.0')
+    testImplementation('org.mock-server:mockserver-netty:5.13.0') {
         exclude module: 'junit'
     }
 
@@ -114,8 +109,6 @@ dependencies {
     //testcontainers
     testImplementation("org.testcontainers:junit-jupiter:1.16.3")
     testImplementation "org.testcontainers:testcontainers:1.16.3"
-
-
 
 }
 test {
@@ -126,12 +119,7 @@ test {
     maxHeapSize = "512m"
 
     // set JVM arguments for the test JVM(s)
-    jvmArgs '-XX:MaxPermSize=256m'
     failFast = true
-
-}
-
-tasks.withType(Test) {
     testLogging {
         exceptionFormat "full"
         events "started", "skipped", "passed", "failed"
@@ -139,32 +127,21 @@ tasks.withType(Test) {
     }
 }
 
+assert JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_17): "Java 17 or newer is required"
+
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
-    sourceCompatibility = JavaVersion.VERSION_11
-    targetCompatibility = JavaVersion.VERSION_11
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
 
     kotlinOptions {
         freeCompilerArgs = ['-Xjsr305=strict']
-        jvmTarget = '11'
+        jvmTarget = '17'
     }
 }
 
 wrapper {
     distributionType = Wrapper.DistributionType.ALL
 }
-
-// https://docs.gradle.org/current/userguide/jacoco_plugin.html
-jacoco {
-    toolVersion = "0.8.6"
-}
-
-jacocoTestReport {
-    reports {
-        xml.enabled true
-    }
-}
-
-tasks.sonarqube.dependsOn tasks["jacocoTestReport"]
 
 repositories {
 
